Fixed meta tags for dark mode disabling on browsers

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -2,7 +2,7 @@ $bootstrap-icons-font-dir: "bootstrap-icons/font/fonts";
 @import "bootstrap-icons/font/bootstrap-icons";
 
 :root {
-  color-scheme: light;
+  color-scheme: only light;
 }
 
 
